@@ -285,10 +285,14 @@ class GMenuSearcher(object):
                         return
 
                 
-    def get_main_menu_path(self, desktop_file):
+    def get_main_menu_path(self, desktop_file, menu_files_list=None):
         if not desktop_file:
             return None
-        for n in ["applications.menu", "settings.menu"]:
+        # use the system ones by default, but allow override for
+        # easier testing
+        if menu_files_list is None:
+            menu_files_list = ["applications.menu", "settings.menu"]
+        for n in menu_files_list:
             tree = gmenu.lookup_tree(n)
             self._search_gmenu_dir([tree.get_root_directory()], 
                                    os.path.basename(desktop_file))
